Fix padding on mobile toc

--- a/_sass/_surge.scss
+++ b/_sass/_surge.scss
@@ -1006,9 +1006,9 @@ thead {
         position: fixed;
         right: 0;
         left: unset;
-        padding: 0;
         border: 5px solid #00000000;
         border-radius: 5px;
+        padding: 5px 5px 0px 5px;
     }
     .toggle {
         display: initial;
